code style: replace String.format() by .formatted(...)